# org.openresty.openresty

./: CMakeLists.txt  build_artifact.py  dependency-log.xml
.github/workflows/: main.yml
cmake/tools/: patch.py
openresty/: CMakeLists.txt  __README__.txt
openresty/installer/: install_linux.lua  openresty.xml
openresty/patches/aarch64-linux-gnu/: 001_run_tests_with_qemu.diff
openresty/patches/none/: README.txt
openresty/patches/riscv64-linux-gnu/: 001_run_tests_with_qemu.diff
